# plaidly-python

./: .gitignore  Makefile  README.md  openapi-python-client.yaml  pyproject.toml
.github/workflows/: publish.yml
spec/: openapi.yaml
src/plaidly/: __init__.py  client.py  errors.py  models.py  webhook.py
tests/: test_client.py  test_webhook.py
