[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plaidly-python"
version = "0.2.0"
description = "Official Plaidly Python SDK"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Plaidly", email = "dev@plaidly.io" }]
keywords = ["plaidly", "crypto", "payments", "sdk"]
dependencies = [
    "httpx>=0.27",
    "attrs>=22.2.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "respx>=0.22"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/plaidly/plaidly-python"
Repository = "https://github.com/plaidly/plaidly-python"

[tool.hatch.build.targets.wheel]
packages = ["src/plaidly"]
